k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exoplanet
  labels:
    name: exoplanet
    environment: production
